--- a/template/qs-studioq-main-new-vpc.template.yaml
+++ b/template/qs-studioq-main-new-vpc.template.yaml
@@ -44,7 +44,6 @@ Metadata:
       - Label:
           default: Adobe Workstation Configuration
         Parameters:
-          - windowsGfxInstanceAMI
           - windowsGrxInstanceType
           - numberOfWorkstations
       - Label:
@@ -57,7 +56,6 @@ Metadata:
           - safeModeAdminPassword
           - testusername
           - testuserpassword
-          - DirectoryServerAmi
           - dcInstanceType
           - domainName
           - qumuloFloatRecordName
@@ -75,13 +73,13 @@ Metadata:
       AvailabilityZone:
         default: "Specify an AZ"
       VpcCidr:
-        default: "PREFER DEFAULT: AWS VPC Subnet"
+        default: "AWS VPC Subnet"
       PublicSubnetCidr:
-        default: "PREFER DEFAULT: AWS VPC Public Subnet"
+        default: "AWS VPC Public Subnet"
       PrivateSubnetCidr:
-        default: "PREFER DEFAULT: AWS VPC Private Subnet"
+        default: "AWS VPC Private Subnet"
       QClusterName:
-        default: "PREFER DEFAULT: Qumulo Cluster Name"
+        default: "Qumulo Cluster Name"
       QInstanceType:
         default: "Qumulo EC2 Instance Type"
       QCapacityType:
@@ -91,47 +89,43 @@ Metadata:
       QInstanceRecoveryTopic:
         default: "OPTIONAL: Qumulo Instance Recovery Topic"
       QSgCidr:
-        default: "PREFER DEFAULT: Qumulo Security Group "
+        default: "Qumulo Security Group"
       ProvisioningServerAMI:
-        default: "PREFER DEFAULT: Linux Server for Secondary Configuration of Qumulo "
+        default: "Linux Server for Secondary Configuration of Qumulo "
       SMBShareName:
-        default: "PREFER DEFAULT: SMB Share Name "
+        default: "SMB Share Name "
       SideCarTemplate:
-        default: "PREFER DEFAULT: Qumulo Sidecar Template URL "
+        default: "Qumulo Sidecar Template URL "
       SideCarUsername:
-        default: "PREFER DEFAULT: Qumulo Sidecar Username "
+        default: "Qumulo Sidecar Username "
       SideCarPassword:
         default: "Qumulo Sidecar Password "
       SideCarSNSTopic:
         default: "OPTIONAL: Qumulo Sidecar SNS Topic "
-      windowsGfxInstanceAMI:
-        default: "AWS Teradici AMI "
       windowsGrxInstanceType:
         default: "AWS Teradici Instance Type "
       numberOfWorkstations:
         default: "OPTIONAL: Total Number of Adobe Workstations"
-      DirectoryServerAmi:
-        default: "PREFER DEFAULT: AWS Directory Server AMI "
       dcInstanceType: 
-        default: "PREFER DEFAULT: AWS Directory Server Instance Type "
+        default: "AWS Directory Server Instance Type "
       domainName: 
-        default: "PREFER DEFAULT: Domain Name "
+        default: "Domain Name "
       adServiceAccountUsername:
-        default: "PREFER DEFAULT: Active Directory Service Admin Username "
+        default: "Active Directory Service Admin Username "
       adServiceAccountPassword:
         default: "Active Directory Service Admin Password "
       dcAdminUsername:
-        default: "PREFER DEFAULT: Domain Controller Admin Username "
+        default: "Domain Controller Admin Username "
       dcAdminPassword:
         default: "Domain Controller Admin Password "
       safeModeAdminPassword:
         default: "Domain Controller Safe-Mode Admin Password "
       testusername:
-        default: "PREFER DEFAULT: Active Directory Account Username "
+        default: "Active Directory Account Username "
       testuserpassword: 
         default: "Active Directory Account User Password "
       qumuloFloatRecordName:
-        default: "PREFER DEFAULT: DNS Record Name for Qumulo RR DNS "
+        default: "DNS Record Name for Qumulo RR DNS "
 
 Parameters:
   QSS3BucketName:
@@ -178,7 +172,6 @@ Parameters:
   SecretKeyName:
     Description: Name of an existing Secret in Secrets Manager that stores the Key Pair PEM file as plaintext
     Type: String
-    Default: pemsecret
   AvailabilityZone:
     Description: All resources will be created in this AZ
     Type: AWS::EC2::AvailabilityZone::Name
@@ -234,7 +227,6 @@ Parameters:
       If empty, the default KMS EBS key will be used. Choosing an invalid key name
       will cause the instance to fail to launch.
     Type: String
-    Default: 3d26f779-69a4-4de1-b16f-3a69152ce1ee
   QInstanceRecoveryTopic:
     Description: Optionally enter the ARN of an SNS topic that receives messages when an instance alarm is triggered.
     Type: String
@@ -244,16 +236,16 @@ Parameters:
     Description: An IPv4 CIDR block for specifying the generated security group's allowed addresses for inbound traffic. Set to x.x.x.x/32 to allow one specific IP address access, 0.0.0.0/0 to allow all IP addresses access, or another CIDR range.
     Type: String
     Default: "10.0.0.0/16"
-  ProvisioningServerAMI: 
-    Description: AWS Linux Server AMI
-    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
-    Default: "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
+#  ProvisioningServerAMI: 
+#    Description: AWS Linux Server AMI
+#    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
+#    Default: "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
   SMBShareName:
     Description: SMB Share Name
     Type: String
     Default: adobe-projects
   SideCarTemplate:
-    Description: Do not change this unless  newer version of Qumulo is being used.
+    Description: Do not change this unless newer version of Qumulo is being used.
     Type: String
     Default: "https://qumulo-sidecar-us-east-1.s3.amazonaws.com/3.3.0/sidecar_cft.json"
   SideCarUsername:
@@ -265,16 +257,11 @@ Parameters:
     MaxLength: 128
     MinLength: 8
     Type: String
-    Default: secuRe_pwd4
     NoEcho: "true"
   SideCarSNSTopic:
     Description: Optionally enter an SNS topic ARN that lambda errors and successful disk replacements will be published to
     Type: String
     Default: ""
-  windowsGfxInstanceAMI: 
-    Description: Enter the Teradici image ID from marketplace
-    Type: AWS::EC2::Image::Id
-    Default: ami-0ccbb970e1176a12c
   windowsGrxInstanceType:
     AllowedValues:
       - g4dn.xlarge
@@ -300,10 +287,6 @@ Parameters:
     Description: "Specify the total number of workstations to build with the instance type above."
     Type: String
     Default: "1"
-  DirectoryServerAmi:
-    Description: AWS Windows Server AMI for Domain Controller and Active Directory
-    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
-    Default: "/aws/service/ami-windows-latest/Windows_Server-2019-English-Full-Base"
   dcInstanceType:
     Description: Domain Controller Instance Type
     Type: String
@@ -328,7 +311,6 @@ Parameters:
     MinLength: 8
     MaxLength: 32
     Type: String
-    Default: secuRe_pwd3
     NoEcho: "true"
   dcAdminUsername:
     Description: User name for the account that will be added as Domain Administrator.  This is separate from the default "Administrator" account.
@@ -364,7 +346,6 @@ Parameters:
     MinLength: 8
     MaxLength: 32
     Type: String
-    Default: CloudIsCool202!
     NoEcho: "true"
   qumuloFloatRecordName:
     Description: Record Name for Round Robin DNS entries for Qumulo Cluster floating IPs
@@ -393,37 +374,61 @@ Resources:
     Type: "AWS::CloudFormation::Stack"
     Properties:
       Parameters:
-        QSS3BucketName: !Ref QSS3BucketName
-        QSS3BucketRegion: !Ref QSS3BucketRegion
-        QSS3KeyPrefix: !Ref QSS3KeyPrefix
-        KeyPair: !Ref KeyPair
-        SecretKeyName: !Ref SecretKeyName
-        VpcId: !GetAtt AWSVPCSTACK.Outputs.VPCID
-        VpcCidr: !Ref VpcCidr
-        PublicSubnetId: !GetAtt AWSVPCSTACK.Outputs.PublicSubnetId
-        PublicSubnetCidr: !Ref PublicSubnetCidr
-        PrivateSubnetId: !GetAtt AWSVPCSTACK.Outputs.PrivateSubnetId
-        PrivateSubnetCidr: !Ref PrivateSubnetCidr
+        adServiceAccountPassword: !Ref adServiceAccountPassword
+        adServiceAccountUsername: !Ref adServiceAccountUsername
         allowInternalSGId: !GetAtt AWSVPCSTACK.Outputs.allowInternalSGId
         allowqumuloSGId: !GetAtt AWSVPCSTACK.Outputs.allowqumuloSGId
         allowrdpSGId: !GetAtt AWSVPCSTACK.Outputs.allowrdpSGId
-        QCapacityType: !Ref QCapacityType
-        QInstanceType: !Ref QInstanceType
-        VolumesEncryptionKey: !Ref VolumesEncryptionKey
-        QClusterName: !Ref QClusterName
-        QSgCidr: !Ref QSgCidr
-        ProvisioningServerAMI: !Ref ProvisioningServerAMI
-        SMBShareName: !Ref SMBShareName
-        QInstanceRecoveryTopic: !Ref QInstanceRecoveryTopic
-        SideCarUsername: !Ref SideCarUsername
-        SideCarPassword: !Ref SideCarPassword
-        SideCarTemplate: !Ref SideCarTemplate
-        SideCarSNSTopic: !Ref SideCarSNSTopic
-        windowsGfxInstanceAMI: !Ref windowsGfxInstanceAMI
-        windowsGrxInstanceType: !Ref windowsGrxInstanceType
+        dcAdminPassword: !Ref dcAdminPassword
+        dcAdminUsername: !Ref dcAdminUsername
+        dcInstanceType: !Ref dcInstanceType
+        domainName: !Ref domainName
+        KeyPair: !Ref KeyPair
         numberOfWorkstations: !Ref numberOfWorkstations
+        PrivateSubnetCidr: !Ref PrivateSubnetCidr
+        PrivateSubnetId: !GetAtt AWSVPCSTACK.Outputs.PrivateSubnetId
+        PublicSubnetCidr: !Ref PublicSubnetCidr
+        PublicSubnetId: !GetAtt AWSVPCSTACK.Outputs.PublicSubnetId
+        QCapacityType: !Ref QCapacityType
+        QClusterName: !Ref QClusterName
+        QInstanceRecoveryTopic: !Ref QInstanceRecoveryTopic
+        QInstanceType: !Ref QInstanceType
+        QSgCidr: !Ref QSgCidr
+        QSS3BucketName: !Ref QSS3BucketName
+        QSS3BucketRegion: !Ref QSS3BucketRegion
+        QSS3KeyPrefix: !Ref QSS3KeyPrefix
+        qumuloFloatRecordName: !Ref qumuloFloatRecordName
+        safeModeAdminPassword: !Ref safeModeAdminPassword
+        SecretKeyName: !Ref SecretKeyName
+        SideCarPassword: !Ref SideCarPassword
+        SideCarSNSTopic: !Ref SideCarSNSTopic
+        SideCarTemplate: !Ref SideCarTemplate
+        SideCarUsername: !Ref SideCarUsername
+        SMBShareName: !Ref SMBShareName
+        testusername: !Ref testusername
+        testuserpassword: !Ref testuserpassword
+        VolumesEncryptionKey: !Ref VolumesEncryptionKey
+        VpcCidr: !Ref VpcCidr
+        VpcId: !GetAtt AWSVPCSTACK.Outputs.VPCID
+        windowsGrxInstanceType: !Ref windowsGrxInstanceType
       TemplateURL:
         !Sub
           - https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}template/qs-studioq-main.template.yaml
           - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
             S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
+Outputs:
+  QumuloPublicIP:
+    Description: Public IP for Qumulo Cluster Management
+    Value: !GetAtt StudioQStack.Outputs.QumuloPublicIP
+  QumuloTempPassword:
+    Description: Temporary Password for Qumulo Cluster
+    Value: !GetAtt StudioQStack.Outputs.QumuloTempPassword
+  QumuloKnowledgeBase:
+    Description: Qumulo Knowledge Base
+    Value: !GetAtt StudioQStack.Outputs.QumuloKnowledgeBase
+  WorkstationStackName:
+    Description: Use this StackName to turn up additional Adobe Workstations with the qs-studioq-add-workstation.cft.yaml template.
+    Value: !GetAtt StudioQStack.Outputs.WorkstationStackName
+  TeradiciPCoIPClientURL:
+    Description: Use this URL to download the PCoIP client for your Windows/Mac/Linux local machine.
+    Value: "https://docs.teradici.com/find/product/software-and-mobile-clients"
